bugs on mobile version fixed

--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,15 @@ html {
   margin: 2rem auto;
 }
 
+.error {
+  color: #e63946;
+  border: 1.5px solid #e63946;
+  background-color: #e0f4ff;
+  padding: 0.5rem;
+  border-radius: 5px;
+  margin: 0.5rem 0.5rem;
+}
+
 nav ul.hidden {
   display: none;
 }
